# sooth

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  ROADMAP.md  SECURITY.md  rust-toolchain.toml
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: audit.yml  ci.yml  pr-title.yml  release.yml
src/: analyzers.rs  cli.rs  history.rs  junit.rs  main.rs  preset.rs  quarantine.rs  report.rs  runner.rs  verify.rs
src/analyzers/: flaky.rs  history.rs
tests/: stdout_contract.rs
tests/fixtures/: empty_testsuite.xml  gotestsum_bare_testsuite.xml  jest_junit_bare_testsuite.xml  missing_durations.xml  phpunit_nested_testsuites.xml  pytest_testsuites.xml
