[package]
name = "sooth"
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
description = "The truth about your tests — a local test-suite observer that finds flaky, slow, and order-dependent tests. Work in progress."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bramvzw/sooth"
homepage = "https://github.com/bramvzw/sooth"
keywords = ["testing", "flaky", "cli", "test", "ci"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "sooth"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
# deny, not warn: CI runs `-D warnings`, so pedantic already fails the build
# there — a plain local `cargo clippy` should agree with CI.
pedantic = { level = "deny", priority = -1 }
