[package]
name = "sooth"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "The truth about your tests — a local test-suite observer that finds flaky, slow, and order-dependent tests. Work in progress."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bramvzw/sooth"
homepage = "https://github.com/bramvzw/sooth"
keywords = ["testing", "flaky", "cli", "test", "ci"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
quick-xml = "0.41.0"

[[bin]]
name = "sooth"
path = "src/main.rs"

[lints.rust]
# forbid, not deny: cannot be overridden with an #[allow] anywhere,
# so "this binary contains no unsafe" is a guarantee, not a default.
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
# deny, not warn: CI runs `-D warnings`, so pedantic already fails the build
# there — a plain local `cargo clippy` should agree with CI.
pedantic = { level = "deny", priority = -1 }
